# bijirjian-1

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  启动 Second Brain OS.command
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial_schema.sql  0002_ai_provider_settings.sql  0003_ai_provider_default_model.sql  0004_prompt_registry.sql  0005_ai_runs.sql  0006_knowledge_nodes.sql  0007_knowledge_node_ai_run_origin.sql  0008_obsidian_settings.sql  0009_export_records.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/services/: ai_provider.rs  capture.rs  dashboard.rs  export.rs  feedback.rs  inbox.rs  knowledge.rs  knowledge_draft.rs  mod.rs  obsidian_settings.rs  pdf_capture.rs  prompt.rs  source_detail.rs  summary.rs
src-tauri/src/commands/: ai_provider.rs  capture.rs  dashboard.rs  dto.rs  export.rs  inbox.rs  knowledge.rs  mod.rs  obsidian_settings.rs  prompt.rs  source_detail.rs  summary.rs
src-tauri/src/domain/: ai_run.rs  export.rs  knowledge.rs  mod.rs  obsidian_settings.rs  prompt.rs  provider.rs  source.rs  workspace.rs
src-tauri/src/domain/ports/: ai_run_repository.rs  credential_store.rs  export_record_repository.rs  knowledge_markdown_writer.rs  knowledge_repository.rs  mod.rs  obsidian_settings_repository.rs  pdf_text_extractor.rs  prompt_repository.rs  provider_router.rs  provider_settings_repository.rs  source_repository.rs  workspace_repository.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/worker/: mod.rs
(+76 files in other folders)
