[package]
name = "second-brain-os"
version = "0.1.0"
description = "Local First AI Knowledge Operating System"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "second_brain_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4.45"
keyring-core = "1.0.0"
pdf-extract = "0.10"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1.23.3", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
